--- a/paper/wrangleData.qmd
+++ b/paper/wrangleData.qmd
@@ -265,7 +265,7 @@ Such 'janitor work' is often viewed as tiresome, as something to be delegated to
 Data wrangling is, however, critically important to scientific inquiry, and errors that arise during this process can undermine our data-harmonization goals.
 
 One kind of data-wrangling error presents a particularly insidious problem: errors that occur during manual data entry.
-Faced with the task of getting data into the correct format before harmonizing, even some very sophisticated researchers will conclude that the most straightforward means to that end is to simply copy the needed data into a spreadsheet manually.
+Faced with the task of getting data into the correct format before harmonizing, even some very sophisticated researchers will conclude that the most straightforward means to that end is to simply copy the needed data into a spreadsheet by hand.
 This technique may be straightforward, but it is very much prone to error.
 @Barchard2011 found that 'research assistants' assigned in an experiment to carefully enter data manually, even those instructed to double-check their entries against the original, had error rates approaching 1% in just a single roughly half-hour session.
 Rates likely go up as the tedious task goes on.
@@ -275,7 +275,7 @@ We suggest three best practices for reducing the rate of data-entry errors.
 First, _automate data entry_ to the greatest extent possible.
 Second, _use the double-entry method_: when manual data entry cannot be avoided, each entry should be made twice, either by separate researchers or sequentially.
 Third, _embrace teamwork_ for any project involving entering data by hand, splitting the task up among team members will reduce the risk of errors going undetected.
-We next demonstrate the application of these practices within two ongoing harmonization efforts, the Standardized World Income Inequality Database (SWIID) and the Dynamic Comparative Public Opinion (DCPO) project.
+We demonstrate the application of these practices within two ongoing harmonization efforts, the Standardized World Income Inequality Database (SWIID) and the Dynamic Comparative Public Opinion (DCPO) project.
 
 
 # Wrangling Income Inequality Data for Harmonization
@@ -375,7 +375,7 @@ The upshot of this process is that the SWIID's harmonized estimates of income in
 # Wrangling Public Opinion Data for Harmonization
 
 Scholarship on comparative public opinion only rarely benefits from relevant items asked annually by the same survey in many countries.^[
-Examples of such fortunate works include @Norris2011 [, 70-77] on trust in government and @Hagemann2017 on attitudes toward European integration; it is telling perhaps that both are based on Eurobarometer surveys and hence limited to European countries.]
+Examples of such fortunate works include @Norris2011 [, 70-77] on trust in government and @Hagemann2017 on attitudes toward European integration; it is telling perhaps that both are based on the extremely rich Eurobarometer surveys and hence limited to European countries.]
 To address the lack of cross-national and longitudinal data on many topics, a number of works have presented latent variable models that harmonize available but incomparable survey items [see @Claassen2019; @Caughey2019; @McGann2019; @Solt2020c; @Kolczynska2024].
 This approach has been used to generate cross-national time-series measures of public opinion on a range of topics, from economic, social, and immigration conservatism [@Caughey2019] to trust in government [@Kolczynska2024].
 The Dynamic Comparative Public Opinion (DCPO) model presented in @Solt2020c in particular has been employed to measure gender egalitarianism [@Woo2023], political interest [@Hu2024], and support for gay rights [@Woo2025], among other aspects of public opinion (see <https://dcpo.org/>).
@@ -389,29 +389,19 @@ To minimize data-entry errors, the dual-entry method is used here too.
 Multiple collaborators go through the entire process separately, and the resulting spreadsheets are compared to catch the omnipresent data-entry errors.
 
 The second step, accumulating the survey responses, is fully automated through the use of the `DCPOtools` R package [@Solt2018].
-When passed the spreadsheet created in the first step, this package reads in each recorded survey dataset, extracts the variable of interest, reorders the response values for this variable from least to most of the concept investigated, and aggregates the number of respondents in each of the reordered response categories in each country for each year in which the survey was fielded.
-The package also automatically ensures that country names are standardized using the excellent `countrycode` package [@Arel-Bundock2018] and that the years accurately reflect actual fieldwork dates using internal crosswalk tables.
+When passed the spreadsheet created in the first step, this package reads in each recorded survey dataset, extracts the variable of interest, reorders the response values for this variable from least to most of the concept investigated, applies survey weights, and then aggregates the weighted number of respondents in each of the reordered response categories in each country for each year in which the survey was fielded.
+`DCPOtools` also automatically ensures that country names are standardized using the excellent `countrycode` package for R [@Arel-Bundock2018] and that the years accurately reflect actual fieldwork dates using internal crosswalk tables.
 The aggregated number of respondents for each observed response-item-country-year then serve as the source data for the latent variable model.
 
-<!-- With democracy under increasing threat in countries around the world, how the public reacts is a crucial question. -->
-<!-- According to a classic and still vibrant literature, growing experience with democratic governance helps generate robust public support for democracy [see, e.g., @Lipset1959a; @Welzel2013; @Wuttke2022]. -->
-<!-- @Claassen2020b argues instead that democratic support behaves thermostatically: that increases in democracy yield an authoritarian backlash in the public, while democratic backsliding prompts the public to rally to democracy's cause. -->
+To illustrate the advantages of this more robust process relative to manual entry, we reexamine the source data for latent variable estimates of public support for democracy that were used first in a pair of very prominent publications [see @Claassen2020a; @Claassen2020b] and subsequently in additional studies [see @Claassen2022; @Jacob2025].
+These source data consist of thousands of nationally aggregated responses to dozens of different questions asked in cross-national survey projects that were apparently copied by hand into a spreadsheet from the crosstabulations included in the surveys' codebooks [see @Claassen2020d].
+Two pieces of data were collected for each distinct survey item in each country and year it was asked: the number of respondents to give a democracy-supporting response---defined, for ordinal questions, as those above the median value of the response scale [@Claassen2020b, Appendix 1.3]---and the total number of respondents to whom the question was posed.
 
-<!-- The evidence it offers in support of this latter argument takes advantage of recent advances in modeling public opinion as a latent variable to measure democratic support. -->
-<!-- This approach provides estimates of the paper's dependent variable for over one hundred countries for up to nearly three decades, constituting a much larger evidentiary base than any previous study. -->
-<!-- These latent-variable estimates, in turn, were based on thousands of nationally aggregated responses to dozens of different questions from cross-national survey projects [@Claassen2020b, 40]. -->
-<!-- Two pieces of data were collected for each distinct survey item in each country and year it was asked: the number of respondents to give a democracy-supporting response---defined, for ordinal responses, as those above the median value of the scale [@Claassen2020b, Appendix 1.3]---and the total number of respondents to whom the question was posed. -->
-<!-- Each of these 7,538 pieces of source data is recorded in a spreadsheet.^[ -->
-<!-- The article's replication materials include only the latent variable estimates without the original survey aggregates that serve as their source data [see @Claassen2020c].  -->
-<!-- Fortunately, however, the spreadsheet recording these original source data is included in the replication materials for a companion piece that employed the identical estimates [see @Claassen2020d]. -->
-<!-- ] -->
-
-We re-collected all of the source data for the publication from the original surveys.
-We identified the variables of the survey items used by the article within each survey dataset, and then we used an automated process to collect the needed data from the survey datasets while avoiding data-entry errors [see @Solt2018].
-In @fig-comparison, we compare the percentage of respondents to give a democracy-supporting response in the hand-entered publication spreadsheet with the percentage we found using our automated process of wrangling these same data.
-When points fall along the plot's dotted line, it indicates that the publication's source data and our own automated workflow reported the same percentages.
-Points above this diagonal represent observations for which the publication data overestimated the actual percentage of respondents who offered a democracy-supporting response, while points below this line are observations where the publication data underestimated this percentage.
-
+We re-collected all of these source data from the original surveys.
+Following the two-step process described above, for each of the 52 survey items in the source data, we first identified the variables, response categories, and so on, and then we used `DCPOtools` to collect the needed data from the survey datasets by machine.
+In @fig-comparison, we compare the percentage of respondents to give a democracy-supporting response in the original hand-entered spreadsheet with the percentage in the machine-collected data.
+When points fall along the plot's dotted line, it indicates that the hand-entered and machine-collected source data report the same percentages.
+Points above this diagonal represent observations for which the hand-entered data are higher than the percentage calculated directly from the survey datasets, while points below this line are observations where the hand-entered data are lower than this machine-collected percentage.
 
 ```{r}
 #| label: data_comparison
@@ -512,7 +502,8 @@ supdem_cri <- full_join(sd, cri, by = c("country", "year", "item_fam", "project"
 # so we'll adopt those years instead to facilitate straight-up comparison
 no_problems <- inner_join(sd %>% select(-dataset), 
                           cri %>% select(-dataset),
-                          by = c("country", "year", "item_fam", "project")) # 3403 obs
+                          by = c("country", "year", "item_fam", "project")) %>% 
+  mutate(diff_year = 0) # 3403 obs
 
 needed <- anti_join(sd %>% select(-dataset),
                     cri %>% select(-dataset))                   # 313 obs
@@ -532,7 +523,8 @@ year_fixes <- left_join(needed,    # 304 obs
   ungroup() %>% 
   filter(closest_to_claassen == abs(diff) & closest_to_dcpo == abs(diff) & abs(diff) <= 3) %>% 
   filter(!(country == "Egypt" & year.x == 2014 & survey == "afrob5")) %>%  # double matches (it's really afrob6)
-  mutate(year = year.y)
+  mutate(year = year.y,
+         diff_year = abs(diff))
 
 cys_crosswalk <- year_fixes %>% 
   select(country, y_dcpo = year.y, y_claassen = year.x, survey) %>% 
@@ -577,7 +569,8 @@ supdem_cri2 <- full_join(sd,
 
 no_problems2 <- inner_join(sd %>% select(-dataset), 
                           cri2 %>% select(-dataset),
-                          by = c("country", "year", "item_fam", "project")) # 3706 obs
+                          by = c("country", "year", "item_fam", "project")) %>% 
+  mutate(year_correct = TRUE) # 3706 obs
 
 needed2 <- anti_join(sd %>% select(-dataset),
                     cri2 %>% select(-dataset))                   # 10 obs; these are not in the surveys
@@ -598,7 +591,9 @@ save(data_comparison, file = here::here("data", "data_comparison.rda"))
 #| label: fig-comparison
 #| fig-cap: "Comparing Democracy-Supporting Responses in Hand-Entered and Machine-Collected Data"
 #| fig-align: "center"
+#| fig-height: 5
 
+load(here::here("data", "data_comparison.rda"))
 
 bad_items <- c("Asia Barometer:\nEvaluation of Democracy",
                "Asian Barometer II:\nSuitability of Democracy",
@@ -613,8 +608,8 @@ plot_support <- data_comparison %>%
            factor(levels = bad_items)) %>% 
   ggplot(aes(x = perc_ours, y = perc_cls)) +
     geom_point(aes(color = p_dcpo3, shape = p_dcpo3), size = 1.5) +
-    labs(y = "Publication Data",
-         x = "Corrected Data") + 
+    labs(y = "Hand-Entered Data",
+         x = "Machine-Collected Data") + 
   geom_abline(intercept = 0, slope = 1, linetype = "dotted") +
   theme_bw() +
   theme(legend.justification=c(1,0), 
@@ -623,18 +618,17 @@ plot_support <- data_comparison %>%
         legend.background = element_rect(fill = "transparent"),
         legend.key.size = unit(1.1, 'lines')) +
   scale_colour_manual(name = element_blank(),
-                        values = alpha(c("blue", "green", "red", "gray50"),
+                        values = alpha(c("gray50",
+                                         "gray10",
+                                         "gray35",
+                                         "gray50"),
                                        c(1, 1, 1, .3)),
                         breaks = bad_items) +
   scale_shape_discrete(name = element_blank(),
                        breaks = bad_items)
 
-tx_note <- str_wrap(
-    c(
-      "Notes: Each point represents the percentage of respondents in a country-year to give a democracy-supporting response to a particular survey item.  Hand-entered data is as reported in Claassen (2020b); the machine-collected data was collected directly from the original surveys.  The Asia Barometer's item on the evaluation of democracy accounts for most overreports, and the Pew Global Attitudes item on the importance of democracy accounts for most substantial underreports.  In both cases, as well as the overreports of the suitability of democracy item in the second wave of the Asian Barometer, the issues can be easily explained by errors in transcribing the data and/or deviations from the reported coding rule.  Deviations in other items result from inconsistent treatment of missing data and/or survey weights, reflecting in part differences in codebook reporting practices across surveys."
-    ),
-    width = 121
-  )
+tx_note <- str_wrap("Notes: Each point represents the percentage of respondents in a country-year to give a democracy-supporting response to a particular survey item.  Hand-entered data is as reported in Claassen (2020b); the machine-collected data was collected directly from the original surveys.  The Asia Barometer's item on the evaluation of democracy accounts for most overreports, and the Pew Global Attitudes item on the importance of democracy accounts for most substantial underreports.  In both cases, as well as the overreports of the suitability of democracy item in the second wave of the Asian Barometer, the issues can be easily explained by errors in transcribing the data and/or deviations from the reported coding rule.  Deviations in other items result from inconsistent treatment of missing data and/or survey weights, reflecting in part differences in codebook reporting practices across surveys.",
+                    width = 118)
 
 plot_support + 
     patchwork::plot_annotation(caption = tx_note) &
@@ -643,28 +637,14 @@ plot_support +
 ```
 
 For `r {mean(data_comparison$diff_perc_abs < .5)*100} %>% round()`% of the country-year-item observations, the difference between these percentages was negligible---less than half a percent---yielding points approximately along the plot's dotted line.
-But for the remaining observations, the difference was often substantial due to data-entry errors in the publication data.
-For example, the Asia Barometer asked respondents in 35 country-years to indicate whether they thought "a democratic political system" would be very good, fairly good, or bad for their country.
-According to the study's coding rules [see @Claassen2020b, Appendix 1.3], only answers above the median of the response categories should be considered as democracy supporting, yet in this case the lukewarm intermediate category was coded as supporting democracy as well.^[
-Although this may be interpreted as an exercise of researcher judgment as to what constitutes a democracy-supporting response rather than a data-entry error, examination of similar answers to similar questions shows that similarly lukewarm responses at and below the median response category  (e.g., in the Arab Barometer, that democracy was "somewhat appropriate" for the country) were coded as not supportive.
-]
-This led to overestimations of the percentage of democracy-supporting responses ranging from `r data_comparison %>% filter(item=="evdemoc_asiab") %>% pull(diff_perc) %>% min() %>% round()` to `r data_comparison %>% filter(item=="evdemoc_asiab") %>% pull(diff_perc) %>% max() %>% round()` percentage points and averaging `r data_comparison %>% filter(item=="evdemoc_asiab") %>% pull(diff_perc) %>% mean() %>% round()` points.
-
-Similarly, the four waves of the Asian Barometer included the following item: "Here is a similar scale of 1 to 10 measuring the extent to which people think democracy is suitable for our country. If 1 means that democracy is completely unsuitable for [name of country] today and 10 means that it is completely suitable, where would you place our country today?"
-In accordance with the coding rules of the study, responses of 6 through 10 are considered democracy supporting, and that is how the first, third, and fourth waves of the survey are coded.
-For the second wave, however, 5 was erroneously also included among the democracy-supporting responses.
-This data-entry error resulted in overestimates of as much as `r data_comparison %>% filter(item=="democsuit_asianb" & (year==2005|year==2006|year==2008)) %>% pull(diff_perc) %>% max() %>% round()` percentage points in 9 country-years. 
-
-A third example comes from the Pew Global Attitudes surveys' four-point item asking about the importance of living in a country with regular and fair contested elections:
-the question wording is "How important is it to you to live in a country where honest elections are held regularly with a choice of at least two political parties? Is it very important, somewhat important, not too important or not important at all?"
-In this case, rather than including respondents who gave both responses above the median---"very important" and "somewhat important"---only those respondents who answered "very important" were entered as supporting democracy.
-This error caused substantial underreporting of the extent of democratic support in 91 country-years.
+But for the remaining observations, the difference was often substantial due to data-entry errors in the hand-entered data.
+For three survey items contributing observations to a total of 135 country-years, the differences were found to result from deviations from the original study's coding rules: for two items the median category was mistakenly also counted as a democracy-supporting response, and for one an above-median category was not (for details, see the online appendix).
 
 While these issues involve mistakes in recording the numerator of the percentage, the number of respondents who provided a democracy-supporting answer, entering the denominator, the total number of respondents asked a question, was also problematic on occasion.
-For example, when the Americas Barometer surveyed Canada in 2010, asked half its sample, when "democracy doesn't work," Canadians "need a strong leader who doesn’t have to be elected through voting."
+For example, when the Americas Barometer surveyed Canada in 2010, it asked half its sample, whether when "democracy doesn't work," Canadians "need a strong leader who doesn’t have to be elected through voting."
 Those who were not asked the question were included in the total number of respondents.
 According to the study's coding rules, refusing to answer is equivalent to answering in a fashion not supporting democracy [see @Claassen2020b, Appendix 1.3].
-This rule may or may not be a reasonable coding choice, but including in this category those who were never asked the question at all is clearly a data-entry error.
+This rule may or may not be a reasonable coding choice [see @Hu2025], but including in this category those who were never asked the question at all is clearly a data-entry error.
 
 Another source of data-entry errors here involves survey weights.
 Weighting raw survey results to maximize the extent to which they are representative of the target population is important.
@@ -672,30 +652,29 @@ Relying on toplines reported in codebooks rather than the survey data itself evi
 These errors shifted the percentage of democracy-supporting responses in both directions, typically by relatively small amounts.
 
 Finally, although not depicted on this plot, data-entry errors were also evident in the variable recording the year in which a survey was conducted: these typically reflected differences between the nominal year of a survey wave and when the survey was actually in the field in a particular country.
-This was an issue for some `r {nrow(needed)/nrow(sd) * 100} %>% round()`% of the country-year observations.
+This was an issue for some `r {nrow(needed)/nrow(sd) * 100} %>% round()`% of the country-year-item observations.
+
+Any one of these mistakes should give pause to any researchers tempted to meet the  challenge of 'janitor work' to harmonization research by hand entering data.
+Correcting all of them is sufficient to undermine the results published in @Claassen2020b on the sources of democratic support, as shown in the online appendix.
 
 
 # Discussion
 
-The analysis above reveals that data-entry errors are an especially pernicious threat to the credibility of our results.
+Data-entry errors are an especially pernicious threat to data-intensive research such as harmonization projects.
 The threat is a subtle one that is not easily detected.
 To discern it requires close scrutiny of every manual entry; merely examining the data and their distribution will uncover few errors [@Barchard2011, 1837-1838].
 Although failure to find support for a research hypothesis may prompt us to undertake a such a close review, an analysis that yields statistical significance is unlikely to trigger what will likely be, as in the above example, a time-consuming and difficult effort [see @Gelman2014, 464].
 These different courses put us in 'the garden of forking paths,' rendering our findings suspect even when we only ever perform a single analysis [@Gelman2014, 464].
 
-In making this recommendation, we are aware that being open and transparent in this way takes effort [@EngzellRohrer2021].
+Our recommendations---to maximize automization, use the double-entry method, and embrace teamwork---take effort [cf., @EngzellRohrer2021].
 But as researchers automate more of their data entry, the chances that they can reuse their code in subsequent projects improve.
-In fact, many common janitor-work chores already have been packaged as open-source software that to make researchers' task more straightforward and easier.^[
-For example, see `readtext` [@Benoit2021] for formatting text files and `DCPOtools` [@Solt2018] for aggregating cross-sectional time-series public-opinion surveys.]
-"Write code instead of working by hand," as @Christensen2019 [, 197] admonish, "don't use Microsoft Excel if it can be avoided."
-
-Second, __use the double-entry method__: when manual data entry cannot be avoided, each entry should be made twice.
-Double entry is labor intensive, but experiments have shown that it reduces error rates by thirty-fold even when done immediately after the initial collection and by the same person [@Barchard2011, 1837].
-Given that data-entry errors can completely undermine the validity of our conclusions, as in the example above, double entry is worth the extra effort.
-
-Third, __embrace teamwork__: for any project involving entering data by hand, splitting the task up among team members will reduce the risk of errors going undetected.
-When double entries are performed by different people, discrepancies will be noted, discussed, and resolved correctly; having two sets of eyes on complex materials like survey codebooks also increases the chances that nuances of the presentation like survey weights will be uncovered.
-Further, by dividing the load, teamwork also lessens the probability of errors due to fatigue arising in the first place.
+Moreover, as the example of `DCPOtools` demonstrates, many common janitor-work chores already have been packaged as open-source software to make researchers' task easier and more straightforward. 
+<!-- For example, see `readtext` [@Benoit2021] for formatting text files. -->
+<!-- "Write code instead of working by hand," as @Christensen2019 [, 197] admonish, "don't use Microsoft Excel if it can be avoided." -->
+And while the double-entry method is labor intensive, experiments have shown that it reduces error rates by thirty-fold even when done immediately after the initial collection and by the same person [@Barchard2011, 1837]; it is worth the extra effort.
+Teamwork cuts the other way.
+For any project involving entering data by hand, splitting the task up among team members lessens the probability of errors due to fatigue arising in the first place, and coupled with the double-entry method, allows discrepancies to be noted, discussed, and resolved correctly.
+Having two sets of eyes on complex materials such as survey codebooks also increases the chances that nuances of the presentation like survey weights will be uncovered.
 
 Data-entry errors are inevitable, and even following these recommendations is unlikely to eliminate them entirely.
 Further, the above suggestions follow closely from a specific case and, although they successfully help us identify and fix its data-entry issues, they do not constitute a panacea to cure all data-processing problems in all types of research. 
@@ -706,26 +685,40 @@ For instance, in the same vein as our first suggestion, @Weidmann2023 provides a
 Furthermore, we regard our efforts and recommendations as a contribution to the open science movement to produce more robust and credible research in the social sciences [see, e.g., @ChristensenEtAl2019] and beyond [see, e.g., @BarchardPace2011; @Lohr2014].
 With careful attention, not only can the threat of data-entry errors to our 'janitor work', our research, and our understanding of the world be minimized, but the transparency, openness, and credibility of our research can continuously grow.
 
-# Reference {.unnumbered}
+# References {.unnumbered}
 
 ::: {#refs-main}
 :::
 
-<!-- \pagebreak -->
+\pagebreak
 
-<!-- \hypertarget{appendix-appendix}{% -->
-<!-- \appendix} -->
+\hypertarget{appendix-appendix}{%
+\appendix}
 
-<!-- # Online Supplementary Materials {.unnumbered} -->
+# Online Supplementary Materials {.unnumbered}
 
-<!-- \setcounter{page}{1} -->
-<!-- \renewcommand{\thepage}{A\arabic{page}} -->
-<!-- \setcounter{figure}{0} -->
-<!-- \renewcommand{\thefigure}{A.\arabic{figure}} -->
-<!-- \setcounter{table}{0} -->
-<!-- \renewcommand{\thetable}{A.\arabic{table}} -->
+\setcounter{page}{1}
+\renewcommand{\thepage}{A\arabic{page}}
+\setcounter{figure}{0}
+\renewcommand{\thefigure}{A.\arabic{figure}}
+\setcounter{table}{0}
+\renewcommand{\thetable}{A.\arabic{table}}
 
-<!-- # Descriptive Statistics -->
+# Deviations from the Stated Coding Rules in 
+For example, the Asia Barometer asked respondents in 35 country-years to indicate whether they thought "a democratic political system" would be very good, fairly good, or bad for their country.
+According to the original study's coding rules [see @Claassen2020b, Appendix 1.3], only answers above the median of the response categories should be considered as democracy supporting, yet in this case the lukewarm intermediate category was coded as supporting democracy as well.^[
+Although this may be interpreted as an exercise of researcher judgment as to what constitutes a democracy-supporting response rather than a data-entry error [see @Hu2025], examination of similar answers to similar questions confirms that similarly lukewarm responses at and below the median response category  (e.g., in the Arab Barometer, that democracy was "somewhat appropriate" for the country) were coded as not supportive.]
+This discrepancy resulted in hand-entered percentages of democracy-supporting responses ranging from `r data_comparison %>% filter(item=="evdemoc_asiab") %>% pull(diff_perc) %>% min() %>% round()` to `r data_comparison %>% filter(item=="evdemoc_asiab") %>% pull(diff_perc) %>% max() %>% round()` percentage points higher than the data automatically collected directly from the survey datasets.
+<!-- and averaging `r data_comparison %>% filter(item=="evdemoc_asiab") %>% pull(diff_perc) %>% mean() %>% round()` points higher. -->
+
+Similarly, the four waves of the Asian Barometer included the following item: "Here is a similar scale of 1 to 10 measuring the extent to which people think democracy is suitable for our country. If 1 means that democracy is completely unsuitable for [name of country] today and 10 means that it is completely suitable, where would you place our country today?"
+In accordance with the coding rules of the study, responses of 6 through 10 are considered democracy supporting, and that is how the first, third, and fourth waves of the survey are coded.
+For the second wave, however, 5 was erroneously also included among the democracy-supporting responses.
+This data-entry error resulted percentages overstated by as much as `r data_comparison %>% filter(item=="democsuit_asianb" & (year==2005|year==2006|year==2008)) %>% pull(diff_perc) %>% max() %>% round()` percentage points in 9 country-years. 
+
+A third example comes from the Pew Global Attitudes surveys' four-point item asking about the importance of living in a country with regular and fair contested elections: the question wording is "How important is it to you to live in a country where honest elections are held regularly with a choice of at least two political parties? Is it very important, somewhat important, not too important or not important at all?"
+In this case, rather than including respondents who gave both responses above the median---"very important" and "somewhat important"---only those respondents who answered "very important" were entered as supporting democracy.
+This error caused the hand-entered percentages to be substantially lower in 91 country-years.
 
 <!-- # Reference {.unnumbered} -->
 
